--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
   <title>Scardle</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="assets/favicon/android-chrome-192x192.png">
+  <link rel="apple-touch-icon" sizes="512x512" href="assets/favicon/android-chrome-512x512.png">
 </head>
 <body>
   <app-root></app-root>
